classes and icons for piglin buildings